0.7.6
------

 - added print text to stdout option
 - removed extra newline appended in re_filter

0.7.5
------

 - removed extra urlparse import

0.7.4
------

 - added option to not save images
 - images are now only saved if saving to HTML or PDF
 - checks if outfilename has extension before adding new one
 - fixed domains being sometimes mismatched to urls
 - fixed extension being unnecessary appended to urls (for the most part)

0.7.3
------

 - development status reverted to beta

0.7.2
------

 - now saves images with PART.html files (but not css yet)
 - added module level docstrings

0.7.1
------

 - added EOFError handling

0.7.0
------

 - fixed crawl not returning filenames to add to infilenames
 - fixed re_filter adding duplicate matches
 - fixed domain unboundlocalerror

0.6.9
------

 - fixed bug where query not found in urls due to trailing /

0.6.8
------

 - updated program usage

0.6.7
------

 - fixed bounds check on out file names

0.6.6
------

 - added out file names as a program argument
 - fixed bug where re-writing multiple files
 - fixed bug where writing only the first file when writing single file

0.6.5
------

 - major improvement to remove_whitespace()

0.6.4
------

 - more docstring improvements

0.6.3
------

 - began process of making docstrings conform to pep257
 - increased size of link cache from 10 to 100
 - remove the newline at start of text files
 - add newlines between lines filtered by regex
 - remove_whitespace now removes newlines that are 3 in a row or more

0.6.2
------

 - stylistic changes
 - files are now read in 1K chunks

0.6.1
------

 - remove consecutive whitespace before writing text files
 - empty text files no longer written

0.6.0
------

 - fixed bug where single out file name wasn't properly constructed
 - out file names are all returned as lowercase now

0.5.9
------

 - fixed bug where text wouldn't write unless xpath specified

0.5.8
------

 - can now parse HTML using XPath and save to all formats